# milk

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  cmake-multi-platform.yml
src/: context.h  frontend.c  frontend.h  main.c  tracking.c  tracking.h
src/frontend/: controller.c  controller.h  frontend.c  frontend.h
